Fixed select on safari

--- a/assets/global-styles.css
+++ b/assets/global-styles.css
@@ -1626,15 +1626,21 @@ p[data-spam-detection-disclaimer] > a {
 /*  ANCHOR: Form */
 
 select {
+	background: url("data:image/svg+xml,%3Csvg width='24' height='25' viewBox='0 0 24 25' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7 10.5L12 15.5L17 10.5' stroke='black' stroke-width='1.5'/%3E%3C/svg%3E%0A") no-repeat right;
 	-moz-appearance: none;
 	-webkit-appearance: none;
 	appearance: none;
+	padding: 0 1.5rem 0 0.5rem;
+}
+
+input,
+textarea {
+	padding: 0 0.5rem;
 }
 
 input,
 textarea,
 select {
-	padding-left: 0.5rem;
 	height: 44px;
 	border: 1px solid rgb(144, 144, 144);
 	background-color: var(--secondary-background-color);
